Refactors user authentication and authorization
Improves the authentication process by introducing a dedicated User entity and DTO for login (Separate Dto and entity)

This change streamlines the login endpoint, using a Userapp DTO to receive credentials and generating a LoginCommand.
 Refactors the token creation to work with the core User entity.
Includes unit tests for access controller and token provider.

--- a/UmaDesignli.UnitTest/UmaDesignli.UnitTest.csproj
+++ b/UmaDesignli.UnitTest/UmaDesignli.UnitTest.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UmaDesignli.Api\UmaDesignli.Api.csproj" />
     <ProjectReference Include="..\UmaDesignli.Application\UmaDesignli.Application.csproj" />
     <ProjectReference Include="..\UmaDesignli.Domain\UmaDesignli.Domain.csproj" />
     <ProjectReference Include="..\UmaDesignli.Infrastructure\UmaDesignli.Infrastructure.csproj" />
